--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
 		<title>演示</title>
 	</head>
 	<body>
-		<div id="root"></div>
+    <p>this is a demo</p>
+    <div id="root"></div>
+    <div id="root1"></div>
 		<script src="../release/index.js"></script>
 		<script>
 			formCheck.init('root', {
-				placeholder: '请输入',
-			});
+        placeholder:'123'
+      });
+      formCheck.init('root1',{
+        placeholder:'4555'
+      })
 		</script>
 	</body>
 </html>
