FU: 修改check逻辑以及是否添加默认样式。

--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
 		<script>
 			formCheck.init('root', {
         placeholder:'phone',
-        isPhone:true
+        type:"phone"
       });
       formCheck.init('root1',{
         placeholder:'web',
-        isWeb:true
+        type:"web"
       });
       formCheck.init('root2',{
         placeholder:'e-mail',
-        isEmail:true
+        type: "email"
       });
       formCheck.init('root3',{
         placeholder:'password',
-        isPassword:true
+        type: "password",
+        withdefaultCSS: false
       });
 		</script>
 	</body>
