--- a/index.html
+++ b/index.html
@@ -4,42 +4,106 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>演示</title>
-    <style>
-      /* 输入框尺寸取决于外包裹的div尺寸 */
-      .width{
-        width: 300px;
-      }
-      .form-check-input{
-        margin: 10px 0;
-      }
-    </style>
+		<title>演示</title>
+		<style>
+			/* 输入框尺寸取决于外包裹的div尺寸 */
+			.width {
+				width: 400px;
+			}
+			.form-check-input {
+				margin: 10px 0;
+			}
+		</style>
 	</head>
 	<body>
-    <p>this is a demo</p>
-    <div class="width" id="root"></div>
-    <div class="width" id="root1"></div>
-    <div class="width" id="root2"></div>
+		<p>this is a demo</p>
+		<svg
+			t="1562574960444"
+			class="icon"
+			viewBox="0 0 1024 1024"
+			version="1.1"
+			xmlns="http://www.w3.org/2000/svg"
+			p-id="1778"
+			width="48"
+			height="48"
+		>
+			<path
+				d="M512 800c-66.112 0-128.32-24.896-182.656-60.096l94.976-94.976A156.256 156.256 0 0 0 512 672c88.224 0 160-71.776 160-160a156.256 156.256 0 0 0-27.072-87.68l101.536-101.536C837.28 398.624 896 493.344 896 512c0 32-171.936 288-384 288m96-288a96 96 0 0 1-96 96c-14.784 0-28.64-3.616-41.088-9.664l127.424-127.424c6.048 12.448 9.664 26.304 9.664 41.088M128 512c0-32 171.936-288 384-288 66.112 0 128.32 24.896 182.656 60.096L277.536 701.216C186.72 625.376 128 530.656 128 512m664.064-234.816l91.328-91.328-45.248-45.248-97.632 97.632C673.472 192.704 595.456 160 512 160 265.248 160 64 443.008 64 512c0 39.392 65.728 148.416 167.936 234.816l-91.328 91.328 45.248 45.248 97.632-97.632C350.528 831.296 428.544 864 512 864c246.752 0 448-283.008 448-352 0-39.392-65.728-148.416-167.936-234.816"
+				fill="#000000"
+				p-id="1779"
+			></path>
+			<path
+				d="M512 352c-88.224 0-160 71.776-160 160 0 15.328 2.848 29.856 6.88 43.872l58.592-58.592a95.616 95.616 0 0 1 79.808-79.808l58.592-58.592A157.76 157.76 0 0 0 512 352"
+				fill="#000000"
+				p-id="1780"
+			></path>
+		</svg>
+		<svg
+			t="1562574975098"
+			class="icon"
+			viewBox="0 0 1024 1024"
+			version="1.1"
+			xmlns="http://www.w3.org/2000/svg"
+			p-id="1912"
+			width="48"
+			height="48"
+		>
+			<path
+				d="M512 608a96 96 0 1 1 0-192 96 96 0 0 1 0 192m0-256c-88.224 0-160 71.776-160 160s71.776 160 160 160 160-71.776 160-160-71.776-160-160-160"
+				fill="#000000"
+				p-id="1913"
+			></path>
+			<path
+				d="M512 800c-212.064 0-384-256-384-288s171.936-288 384-288 384 256 384 288-171.936 288-384 288m0-640C265.248 160 64 443.008 64 512c0 68.992 201.248 352 448 352s448-283.008 448-352c0-68.992-201.248-352-448-352"
+				fill="#000000"
+				p-id="1914"
+			></path>
+		</svg>
+		<svg
+			t="1562574996720"
+			class="icon"
+			viewBox="0 0 1024 1024"
+			version="1.1"
+			xmlns="http://www.w3.org/2000/svg"
+			p-id="2046"
+			width="48"
+			height="48"
+		>
+			<path
+				d="M512 896C299.936 896 128 724.064 128 512S299.936 128 512 128s384 171.936 384 384-171.936 384-384 384m0-832C264.96 64 64 264.96 64 512s200.96 448 448 448 448-200.96 448-448S759.04 64 512 64"
+				fill="#181818"
+				p-id="2047"
+			></path>
+			<path
+				d="M665.376 313.376L512 466.752l-153.376-153.376-45.248 45.248L466.752 512l-153.376 153.376 45.248 45.248L512 557.248l153.376 153.376 45.248-45.248L557.248 512l153.376-153.376z"
+				fill="#181818"
+				p-id="2048"
+			></path>
+		</svg>
+		<div class="width" id="root"></div>
+		<div class="width" id="root1"></div>
+		<div class="width" id="root2"></div>
     <div class="width" id="root3"></div>
 		<script src="../release/index.js"></script>
 		<script>
 			formCheck.init('root', {
-        placeholder:'phone',
-        type:"phone"
-      });
-      formCheck.init('root1',{
-        placeholder:'web',
-        type:"web"
-      });
-      formCheck.init('root2',{
-        placeholder:'e-mail',
-        type: "email"
-      });
-      formCheck.init('root3',{
-        placeholder:'password',
-        type: "password",
-        withdefaultCSS: false
-      });
+				placeholder: 'phone',
+				type: 'phone',
+				isMust: true,
+			});
+			formCheck.init('root1', {
+				placeholder: 'web',
+				type: 'web',
+			});
+			formCheck.init('root2', {
+				placeholder: 'e-mail',
+				type: 'email',
+			});
+			formCheck.init('root3', {
+				placeholder: 'password',
+				type: 'password',
+				withdefaultCSS: false,
+			});
 		</script>
 	</body>
 </html>
