--- a/example.html
+++ b/example.html
@@ -23,7 +23,7 @@
 		<form class="width" id="root1"></form>
 		<form class="width" id="root2"></form>
 		<form class="width" id="root3"></form>
-		<script src="../release/index.js"></script>
+		<script src="https://unpkg.com/form-check-input/release/index.min.js"></script>
 		<script>
 			formCheck.init('root', {
 				placeholder: '1',
