docs: rename docs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</style>
 	</head>
 	<body>
-		<p>this is a demo</p>
+		<a href="https://alfxjx.github.io/form-check-input/example.html">this is a demo</a>
 		<form class="width" id="root"></form>
 		<form class="width" id="root1"></form>
 		<form class="width" id="root2"></form>
