--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 		<script>
 			formCheck.init('root', {
 				placeholder: '1',
-				type: 'phone',
+				type: 'password',
 				isMust: true,
 				mustPosition: 'left',
-				showClear: true,
-				showEye: true,
+				showClear: false,
+				showEye: false,
 			});
 			formCheck.init('root1', {
 				placeholder: '2',
 				type: 'password',
 				isMust: true,
 				mustPosition: 'right',
-				showClear: true,
+				showClear: false,
 				showEye: true,
 			});
 			formCheck.init('root2', {
